tests/negative/test_dot_tup_owning_non_ref.orb
data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {};

fnc bar () (Foo Foo) {
    sym f:(Foo Foo);
    ret (>> f);
};

fnc main () () {
    . (bar) 0;
};